--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,8 +1,8 @@
 {% if page.comments %}
-<div id="disqus_thread"></div>
 <script type="text/javascript">
-    /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-    var disqus_shortname = 'dieguico'; // Required - Replace '<example>' with your forum shortname
+    /* * * CONFIGURATION VARIABLES: THIS CODE IS ONLY AN EXAMPLE * * */
+    var disqus_shortname = 'dieguico'; // Required - Replace example with your forum shortname
+    var disqus_identifier = page.title;
 
     /* * * DON'T EDIT BELOW THIS LINE * * */
     (function() {
@@ -11,6 +11,5 @@
         (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
     })();
 </script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 {% endif %}
 
