--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -2,7 +2,7 @@
 <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES: THIS CODE IS ONLY AN EXAMPLE * * */
     var disqus_shortname = 'dieguico'; // Required - Replace example with your forum shortname
-    var disqus_identifier = page.title;
+    var disqus_identifier = {{ page.title }};
 
     /* * * DON'T EDIT BELOW THIS LINE * * */
     (function() {
