--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,6 +24,7 @@ layout: default
   </ul>
 </div>
 
+<div id="disqus_thread"></div>
 <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES: THIS CODE IS ONLY AN EXAMPLE * * */
     var disqus_shortname = 'dieguico'; // Required - Replace example with your forum shortname
@@ -34,3 +35,4 @@ layout: default
         (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
     })();
 </script>
+</div>
