--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,3 +23,9 @@ layout: default
     {% endfor %}
   </ul>
 </div>
+
+<footer class="footer">
+  {% if site.footer-links.github %}<a href="http://github.com/{{ site.footer-links.github }}">{% include svg-icons/github.html %}</a>{% endif %}
+  {% if site.footer-links.twitter %}<a href="http://twitter.com/{{ site.footer-links.twitter }}">{% include svg-icons/twitter.html %}</a>{% endif %}
+  {% if site.footer-links.flickr %}<a href="http://flickr.com/{{ site.footer-links.twitter }}">{% include svg-icons/flickr.html %}</a>{% endif %}
+</footer>
