more style changes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
           {% for page in site.pages_list %}
               &nbsp;&nbsp;&nbsp;<small><a href="{{ page[1]  }}">{{ page[0] }}</a></small>
           {% endfor %}
-	  &nbsp;&nbsp;&nbsp;&mdash;&nbsp;&nbsp;&nbsp;
+	  &nbsp;<small>&mdash;</small>&nbsp;
           <a href="https://twitter.com/dieguico" target="_blank">
             <i class="fa fa-twitter"></i></a>
           <a href="https://flickr.com/dieguico" target="_blank">
