--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
           <a href="/" title="Home">{{ site.title }}</a>
 
           {% for page in site.pages_list %}
-              &nbsp;&nbsp;&nbsp;<small><a href="{{ page[1]  }}">{{ page[0] }}</a></small>
+              &nbsp;&nbsp;<small><a href="{{ page[1]  }}">{{ page[0] }}</a></small>
           {% endfor %}
 	  &nbsp;<small>&ndash;</small>&nbsp;
           <a href="https://twitter.com/dieguico" target="_blank">
