--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,8 +18,8 @@
   <link rel="stylesheet" href="/public/css/syntax.css">
 
   <!-- Icons -->
-<!--  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/public/apple-touch-icon-144-precomposed.png">
-                                 <link rel="shortcut icon" href="/public/favicon.ico"> -->
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/public/apple-touch-icon-precomposed.png">
+  <link rel="shortcut icon" href="/public/favicon.ico"> -->
   <link rel="apple-touch-icon" sizes="57x57" href="/public/apple-touch-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="/public/apple-touch-icon-60x60.png">
   <link rel="apple-touch-icon" sizes="72x72" href="/public/apple-touch-icon-72x72.png">
@@ -30,12 +30,15 @@
   <link rel="apple-touch-icon" sizes="152x152" href="/public/apple-touch-icon-152x152.png">
   <link rel="apple-touch-icon" sizes="180x180" href="/public/apple-touch-icon-180x180.png">
   <link rel="icon" type="image/png" href="/public/favicon-32x32.png" sizes="32x32">
-  <link rel="icon" type="image/png" href="/public/android-chrome-192x192.png" sizes="192x192">
+  <link rel="icon" type="image/png" href="/public/favicon-194x194.png" sizes="194x194">
   <link rel="icon" type="image/png" href="/public/favicon-96x96.png" sizes="96x96">
+  <link rel="icon" type="image/png" href="/public/android-chrome-192x192.png" sizes="192x192">
   <link rel="icon" type="image/png" href="/public/favicon-16x16.png" sizes="16x16">
   <link rel="manifest" href="/public/manifest.json">
-  <meta name="msapplication-TileColor" content="#00aba9">
+  <link rel="shortcut icon" href="/public/favicon.ico">
+  <meta name="msapplication-TileColor" content="#2b5797">
   <meta name="msapplication-TileImage" content="/public/mstile-144x144.png">
+  <meta name="msapplication-config" content="/public/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
 
   <!-- RSS -->
