--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
           <a href="https://twitter.com/dieguico" target="_blank">
             <i class="fa fa-twitter"></i></a>
           <a href="https://es.linkedin.com/in/diegovilluendas" target="_blank">
-            <i class="fa fa-linkedin"></i></a>
+            <i class="fa fa-linkedin-square"></i></a>
           <a href="https://github.com/dieguico" target="_blank">
             <i class="fa fa-github"></i></a>
         </h3>
