--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,11 +18,11 @@
           {% endfor %}
 	  &nbsp;<small>&ndash;</small>&nbsp;
           <a href="https://twitter.com/dieguico" target="_blank">
-            <i class="fa fa-twitter"></i></a>
+            <i class="fa fa-twitter-square"></i></a>
           <a href="https://es.linkedin.com/in/diegovilluendas" target="_blank">
             <i class="fa fa-linkedin-square"></i></a>
           <a href="https://github.com/dieguico" target="_blank">
-            <i class="fa fa-github"></i></a>
+            <i class="fa fa-github-square"></i></a>
         </h3>
       </div>
 
