--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
 
       <div class="footer">
         <p>
-          &copy; {{ site.time | date: '%Y' }}. All rights reserved.
+          &copy; {{ site.time | date: '%Y' }}. <a href="http://creativecommons.org/licenses/by-sa/4.0/" title="Creative Commons Attribution Attribution-ShareAlike 4.0 International">Some rights reserved.</a>
         </p>
       </div>
     </div>
